# COVEN-CORE

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README_DEV.md  package.xml  pyproject.toml  setup.cfg  setup.py  template.md
coven_core/: common.py  dock_node.py  dock_node_multi.py  module_flaky.py  module_node.py
coven_core.egg-info/: PKG-INFO  SOURCES.txt
launch/: dock_and_module.launch.py
resource/: coven_core
